tests/snapshots/run_wpt_conformance__onnx_quantizeLinear_float16_2D_tensor_with_int4_zeroPoint_which_has_even_size.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "quantizeLinear.https.any.js",
    "quantizeLinear float16 2D tensor with int4 zeroPoint which has even size",
    "onnx",
    "PASS",
)
