tests/snapshots/run_wpt_conformance__onnx_quantizeLinear_float16_4D_tensor_broadcasting_scale_and_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "quantizeLinear.https.any.js",
    "quantizeLinear float16 4D tensor broadcasting scale and zeroPoint",
    "onnx",
    "PASS",
)
