tests/snapshots/run_wpt_conformance__onnx_quantizeLinear_float32_1D_constant_tensor_with_uint8_1D_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "quantizeLinear.https.any.js",
    "quantizeLinear float32 1D constant tensor with uint8 1D zeroPoint",
    "onnx",
    "PASS",
)
