tests/snapshots/run_wpt_conformance__onnx_quantizeLinear_float32_2D_tensor_broadcasting_zeroPoint_and_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "quantizeLinear.https.any.js",
    "quantizeLinear float32 2D tensor broadcasting zeroPoint and scale",
    "onnx",
    "PASS",
)
